# BK-Wiver

./: .dockerignore  .editorconfig  .env.example  .env.server  .gitattributes  .gitignore  BUILD-MONITOR.md  BUILD-READY.md  COMPLETION-STATUS.md  CONNECT.md  Cargo.toml  DEVELOPMENT-PROGRESS.md  DIAGNOSTICS-IMPROVEMENTS.md  FINAL-COMPLETION-REPORT.md  FINAL-REPORT.md  GIT-PUSH-STATUS.md  GITHUB-PUSH-INSTRUCTIONS.md  HOST-CONNECT-INSTRUCTIONS.md  IMPLEMENTATION-PLAN.md  IMPROVEMENTS.md  INSTALLATION-INSTRUCTIONS.md  LATEST-STATUS.md  MONITOR-STATUS.md  MONITORING-v0.1.30.md  OPTIMIZATION-IMPROVEMENTS.md  OPTIMIZATION-SUMMARY.md  OPTIMIZATION-TEST.md  PROJECT-COMPLETE.md  PROJECT-STATUS.md  README-ubuntu-update.txt  README.md  README.txt  RELEASE-CHANGES.md  REPO-UPDATE.md  SERVER-OPERATION.md  SSH-INSTRUCTIONS.md  SSH-SETUP.md  STATUS-v0.1.30.md  TEST-RESULTS.md  TEST-STATUS.md  (+13 more)
.github/workflows/: macos-build.yml  macos-release.yml  windows-build.yml  windows-release.yml
.qwen/: settings.json  settings.json.orig
Consol/app/: Cargo.toml  build.rs
Consol/app/src/: api.rs  app.rs  logging.rs  main.rs  media.rs  signal.rs
Consol/installer/windows/: BK-Wiver-Consol.iss
ConsolMac/.tmp/: app.icns
ConsolMac/app/: Cargo.toml  build.rs
ConsolMac/app/src/: main.rs
ConsolMac/installer/macos/: Info.plist  build_console_macos.sh
Host/app/: Cargo.toml  build.rs
Host/app/src/: api.rs  app.rs  capture.rs  logging.rs  main.rs  media.rs  signal.rs
Host/app/src/capture/: common.rs  windows.rs
Host/app/src/media/: windows_encoder.rs
Host/installer/windows/: BK-Wiver-Host.iss
Server/app/: Cargo.toml  Dockerfile  README.md
Server/app/admin-ui/: admin.html
Server/app/src/: main.rs  server.rs
Server/deploy/: docker-compose.lan.yml  env.lan.example  env.lan.nginx.example
Server/deploy/nginx/: bk-wiver-lan-selfsigned.conf  bk-wiver-lan.conf
Server/deploy/scripts/: install-nginx-http.sh  install-nginx-selfsigned.sh  install-systemd.sh  logs-lan.sh  up-lan.sh
Server/deploy/systemd/: bk-wiver.service
Server/update/: Cargo.toml  README-ubuntu-update.txt  docker-compose.yml  update-server-ubuntu.sh  verify-server-ubuntu.sh
Server/update/apps/server/src/: server.rs
branding/: README.txt
deploy/nginx/: nginx-wiver.conf  nginx.conf
docs/: architecture.md  components.md  deployment-nginx-ubuntu.md  deployment-ubuntu.md  development.md  platform-matrix.md  roadmap.md  server-api.md  session-flow.md
icon/: README.txt
proto/control/v1/: control.proto
scripts/: fetch_ffmpeg_windows.ps1  prepare_windows_bundle.ps1
