[package]
name = "bk-wiver-console"
version = "0.1.28"
edition = "2024"
build = "build.rs"

[dependencies]
crossbeam-channel = "0.5"
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
image = "0.24.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
url = "2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
