[package]
name = "bk-wiver-host"
version = "0.1.30"
edition = "2024"
build = "build.rs"

[dependencies]
crossbeam-channel = "0.5"
enigo = "0.2.1"
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
image = "0.24.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
screenshots = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.19"
tungstenite = "0.24"
url = "2"
# Точный таймер для стабильных 30fps
spin_sleep = "1.3"
# Быстрый hash для screen change detection
twox-hash = "2.1"

# In-process видео кодирование — опционально, требует ffmpeg dev headers
# Включается только на машинах где есть ffmpeg development libraries
ffmpeg-next = { git = "https://github.com/zmwangx/rust-ffmpeg", branch = "master", optional = true }

[features]
default = []
# In-process H.264 encoding через ffmpeg-next (требует ffmpeg dev headers)
in-process-encoding = ["dep:ffmpeg-next"]

[target.'cfg(windows)'.dependencies]
dxgi-capture-rs = { path = "../third_party/dxgi-capture-rs" }
windows = { version = "0.61.3", features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
] }
windows-service = "0.7"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_RemoteDesktop",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
